Add support for defining custom exception types and throwing exceptions. However, catching exceptions is not yet supported.

--- a/_py2tmp/tests/CMakeLists.txt
+++ b/_py2tmp/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/pytest.ini"
      CONTENT "
 [pytest]
 testpaths = \"${CMAKE_CURRENT_SOURCE_DIR}\"
-addopts = -r a
+addopts = -r a --tb=short
 ")
 
 file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/conftest.py"
