--- a/_py2tmp/tests/CMakeLists.txt
+++ b/_py2tmp/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ CXX_COMPILER_NAME='${CMAKE_CXX_COMPILER_ID}'
 CXX_COMPILER_VERSION='${CMAKE_CXX_COMPILER_VERSION}'
 ADDITIONAL_LINKER_FLAGS='${CMAKE_EXE_LINKER_FLAGS}'
 CMAKE_BUILD_TYPE='${CMAKE_BUILD_TYPE}'
-MPYL_INCLUDE_DIR='${CMAKE_CURRENT_SOURCE_DIR}/../../include'
+TMPPY_INCLUDE_DIR='${CMAKE_CURRENT_SOURCE_DIR}/../../include'
 ")
 
 file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/pytest.ini"
