--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,12 @@ file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/conftest.py"
      CONTENT "
 ")
 
+add_custom_command(OUTPUT builtins.tmppyc
+                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+                   COMMAND PYTHONPATH=${CMAKE_CURRENT_SOURCE_DIR} python3 _py2tmp/generate_ir0_builtins.py -o ${CMAKE_CURRENT_BINARY_DIR}/builtins.tmppyc
+                   )
+
+add_custom_target(builtins-tmppyc ALL
+                  DEPENDS builtins.tmppyc)
+
 add_subdirectory(tests)
