--- a/.travis.yml
+++ b/.travis.yml
@@ -22,26 +22,12 @@ matrix:
     script: export OS=linux; export COMPILER='gcc-10'; export UBUNTU='20.04'; extras/scripts/postsubmit.sh
       DebugPlain
   - _compiler: clang
-    env: COMPILER=clang-6.0 STL=libstdc++ UBUNTU=20.04 TEST=ReleasePlain
+    env: COMPILER=clang-6.0 STL=libstdc++ UBUNTU=20.04 TEST=DebugPlainReleasePlain
     install: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
       export UBUNTU='20.04'; extras/scripts/travis_ci_install_linux.sh
     os: linux
     script: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
-      export UBUNTU='20.04'; extras/scripts/postsubmit.sh ReleasePlain
-  - _compiler: clang
-    env: COMPILER=clang-6.0 STL=libstdc++ UBUNTU=20.04 TEST=DebugPlain
-    install: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
-      export UBUNTU='20.04'; extras/scripts/travis_ci_install_linux.sh
-    os: linux
-    script: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
-      export UBUNTU='20.04'; extras/scripts/postsubmit.sh DebugPlain
-  - _compiler: clang
-    env: COMPILER=clang-6.0 STL=libstdc++ UBUNTU=20.04 TEST=DebugAsanUbsan
-    install: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
-      export UBUNTU='20.04'; extras/scripts/travis_ci_install_linux.sh
-    os: linux
-    script: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
-      export UBUNTU='20.04'; extras/scripts/postsubmit.sh DebugAsanUbsan
+      export UBUNTU='20.04'; extras/scripts/postsubmit.sh DebugPlainReleasePlain
   - _compiler: gcc
     env: COMPILER=gcc-9 TEST=DebugPlain
     install: export OS=osx; export COMPILER='gcc-9'; travis_wait extras/scripts/travis_ci_install_osx.sh
@@ -76,6 +62,20 @@ matrix:
     os: linux
     script: export OS=linux; export COMPILER='gcc-7'; export UBUNTU='20.04'; extras/scripts/postsubmit.sh
       DebugPlain
+  - _compiler: clang
+    env: COMPILER=clang-6.0 STL=libstdc++ UBUNTU=20.04 TEST=ReleasePlain
+    install: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
+      export UBUNTU='20.04'; extras/scripts/travis_ci_install_linux.sh
+    os: linux
+    script: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
+      export UBUNTU='20.04'; extras/scripts/postsubmit.sh ReleasePlain
+  - _compiler: clang
+    env: COMPILER=clang-6.0 STL=libstdc++ UBUNTU=20.04 TEST=DebugPlain
+    install: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
+      export UBUNTU='20.04'; extras/scripts/travis_ci_install_linux.sh
+    os: linux
+    script: export OS=linux; export COMPILER='clang-6.0'; export STL='libstdc++';
+      export UBUNTU='20.04'; extras/scripts/postsubmit.sh DebugPlain
   - _compiler: clang
     env: COMPILER=clang-10.0 STL=libstdc++ UBUNTU=20.04 TEST=ReleasePlain
     install: export OS=linux; export COMPILER='clang-10.0'; export STL='libstdc++';
