--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.2)
 project(TMPPy VERSION 3.5.0 LANGUAGES CXX)
 
+find_program(PYTHON
+             NAMES python3.8 python3)
+
 add_custom_command(OUTPUT builtins.tmppyc
                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-                   COMMAND PYTHONPATH=${CMAKE_CURRENT_SOURCE_DIR} python3.8 _py2tmp/compiler/_generate_ir0_builtins.py -o ${CMAKE_CURRENT_BINARY_DIR}/builtins.tmppyc
+                   COMMAND PYTHONPATH=${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON} _py2tmp/compiler/_generate_ir0_builtins.py -o ${CMAKE_CURRENT_BINARY_DIR}/builtins.tmppyc
                    )
 
 add_custom_target(builtins-tmppyc ALL
