Propagate CMAKE_CXX_FLAGS and TMPPY_COMPILE_FLAGS to the set of flags used in tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,7 @@ add_custom_target(builtins-tmppyc ALL
 
 option(TMPPY_TESTS_USE_PRECOMPILED_HEADERS "Whether to use pre-compiled headers (PCHs) in TMPPy tests." ON)
 
-set(TMPPY_COMPILE_FLAGS
-"-W -Wall -g0 -Werror -std=c++11")
+set(TMPPY_COMPILE_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -g0 -Werror -std=c++11")
 
 if ("${TMPPY_TESTS_USE_PRECOMPILED_HEADERS}")
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
@@ -50,7 +49,7 @@ file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/py2tmp_test_config.py"
 CXX='${CMAKE_CXX_COMPILER}'
 CXX_COMPILER_NAME='${CMAKE_CXX_COMPILER_ID}'
 CXX_COMPILER_VERSION='${CMAKE_CXX_COMPILER_VERSION}'
-ADDITIONAL_COMPILER_FLAGS='${TMPPY_TESTONLY_CXXFLAGS}'
+ADDITIONAL_COMPILER_FLAGS='${TMPPY_TESTONLY_CXXFLAGS} ${TMPPY_COMPILE_FLAGS}'
 ADDITIONAL_LINKER_FLAGS='${CMAKE_EXE_LINKER_FLAGS}'
 CMAKE_BUILD_TYPE='${CMAKE_BUILD_TYPE}'
 MPYL_INCLUDE_DIR='${CMAKE_CURRENT_SOURCE_DIR}/include'
